fixed horizontal overflow in mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,6 +50,7 @@ body {
   font: 400 15px Lato, sans-serif;
   line-height: 1.8;
   color: #818181;
+  overflow-x: hidden;
 }
 h2 {
   font-size: 24px;
